# embedded-final-ecg

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  JiDianHei_18.c  ecg_ai_diagnosis.c  ecg_ai_diagnosis.h  ecg_config.h  ecg_dsp.c  ecg_dsp.h  ecg_hardware.c  ecg_hardware.h  ecg_ui.c  ecg_ui.h  idf_component.yml  main.c
main/panTompkins/: panTompkins.c
old/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
old/main/: CMakeLists.txt  idf_component.yml  main.c
old/main/panTompkins/: panTompkins.h
old/partition_table/: partitionTable.csv
