idf_component_register(
    SRCS
        "main.c"
        "ecg_hardware.c"
        "ecg_dsp.c"
        "ecg_ai_diagnosis.c"
        "ecg_ui.c"
        "JiDianHei_18.c"
        "panTompkins/panTompkins.c"
    PRIV_REQUIRES
        spi_flash
        esp_adc
        esp_lcd
        driver
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_spi
        esp_timer
    REQUIRES
        atanisoft__esp_lcd_ili9488
        espressif__esp-dsp
        lvgl__lvgl
    INCLUDE_DIRS
        "."
        "panTompkins"
)
